fix: buttons align on card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1889,7 +1889,7 @@ section.surroundings-section-container{
 .img-home-appartment-section {
   width: 100%;
   object-fit: cover;
-  max-height: 200px;
+  max-height: 160px;
   margin-bottom: 20px;
 }
 .img-home-appartment-details-section {
